# qualitair

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  codecov.yml  coverage.sh
html-templates/: .postcssrc  gulpfile.js  package.json
html-templates/src/broken/: broken-template.html  main.js
html-templates/src/common/: style.css
html-templates/src/ingest/: ingest-template.html  main.js
html-templates/src/similar/: main.js  similar-template.html
html-templates/src/spikes/: GridViewer.js  main.js  spikes-template.html
html-templates/src/stats/: main.js  stats-template.html
installer/: create-installer.sh
installer/qualitair/: install.sh
installer/qualitair/assets/: config.ini  db.sqlite
src/: Test.cpp  Test.h  globals.h  main.cpp  utils.h
src/Controller/include/: CLIParser.h  Cache.h  Command.h  Config.h  Controller.h  DetectBrokenCommand.h  DetectSimCommand.h  IngestCommand.h  Logger.h  SensorsCommand.h  SpikesCommand.h  StatsCommand.h
src/Controller/src/: CLIParser.cpp  Cache.cpp  Command.cpp  Config.cpp  Controller.cpp  DetectBrokenCommand.cpp  DetectSimCommand.cpp  IngestCommand.cpp  Logger.cpp  SensorsCommand.cpp  SpikesCommand.cpp  StatsCommand.cpp
src/Data/include/: Attribute.h  BBox.h  ConnectionFactory.h  IData.h  Measurement.h  QueryBuilder.h  Sensor.h
src/Data/src/: Attribute.cpp  BBox.cpp  ConnectionFactory.cpp  IData.cpp  Measurement.cpp  QueryBuilder.cpp  Sensor.cpp
src/DataProcessor/include/: ATMOComputer.h  Aggregation.h  Average.h  BrokenDetection.h  BrokenDetection.test.h  DataProcessor.h  Deviation.h  Extrems.h  FormulaComputer.h  IDataProcess.h  IDataProcessor.h  SimilarDetection.h  SpikeDetection.h
src/DataProcessor/src/: ATMOComputer.cpp  Aggregation.cpp  Average.cpp  BrokenDetection.cpp  DataProcessor.cpp  Deviation.cpp  Extrems.cpp  FormulaComputer.cpp  IDataProcess.cpp  IDataProcessor.cpp  SimilarDetection.cpp  SpikeDetection.cpp
src/ETL/include/: AttributeFilter.h  ETL.h  Filter.h  GeoFilter.h  IETL.h  Interpolater.h  Octree.h  Point.h  Quadtree.h  SensorFilter.h  TimeFilter.h
src/ETL/src/: AttributeFilter.cpp  ETL.cpp  Filter.cpp  GeoFilter.cpp  IETL.cpp  Interpolater.cpp  Octree.cpp  Point.cpp  Quadtree.cpp  SensorFilter.cpp  TimeFilter.cpp
src/View/include/: IOutput.h  OutputCLI.h  OutputHTML.h  OutputJSON.h
src/View/src/: IOutput.cpp  OutputCLI.cpp  OutputHTML.cpp  OutputJSON.cpp
tests/: utils.hpp
tests/data/: config-sample.ini  dbmock.sqlite
tests/data/csv/clean/: attributes.csv  measurements.csv  sensors.csv
tests/data/csv/dirty/: attributes.csv
tests/data/csv/real/: AttributeType.csv  Sensors.csv
tests/unit-tests/: CMakeLists.txt  Test.test.cpp  utils.test.cpp
tests/unit-tests/Controller/: CLIParser.test.cpp  Cache.test.cpp  Config.test.cpp
tests/unit-tests/Data/: BBox.test.cpp  ConnectionFactory.test.cpp  QueryBuilder.test.cpp
tests/unit-tests/DataProcessor/: ATMOComputer.test.cpp  Aggregation.test.cpp  Average.test.cpp  BrokenDetection.cpp  BrokenDetection.test.cpp  DataProcessor.test.cpp  Deviation.test.cpp  Extrems.test.cpp  FormulaComputer.test.cpp  SimilarDetection.test.cpp  SpikeDetection.test.cpp
tests/unit-tests/ETL/: AttributeFilter.test.cpp  ETL.test.cpp  GeoFilter.test.cpp  Interpolater.test.cpp  Octree.test.cpp  Quadtree.test.cpp  SensorFilter.test.cpp  TimeFilter.test.cpp
tests/unit-tests/View/: OutputCLI.test.cpp  OutputHTML.test.cpp  OutputJSON.test.cpp
